Wed Aug  4 03:30:19 1999  Owen Taylor  <otaylor@redhat.com>

	* doc/style-guide.txt: Removed references to creating
	tables explicitely in favor of demonstrating new
	syntax. Added a short section on /<* public >*/
	and /*< private *>/.

Wed Aug  4 03:15:19 1999  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mktmpl.in gtkdoc-mkhtml.in: Handle Struct and
	Enumerations in approximately the same way as we
	handle parameters. That is, instead of (as before)
	coding in the tables by hand, one uses lines like:

	@width: the width of the rectangle in pixels.

	To support migration from the older hand-coded
	tables, if none of the members of a structure or
	enumeration have a description in a @... line, then
	we don't generate the table at all.

	Also, gtkdoc-mktmpl now loads up the object heirarchy,
	because we need to be able to check if structures
	are widget structures.

	In general, the coding here is pretty clean, though
	the style is a little different. (I'm interating
	through strings with m/.../msg; instead of 
	s/^...//; for one thing.) However, there are a some
	of FIXME's where I've whimped out on try to handle
	real C syntax, and the need to split out and librarize
	a bunch of duplicated code is greater than ever.

1999-06-06  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* configure.in: updated version to 0.3.

	* doc/style-guide.txt: A couple of minor changes.

	* gtkdoc-mkdb.in: Get rid of a couple of messages.
	Output an empty <para> if an Arg isn't documented, to keep Jade happy.

1999-05-22  Damon Chaplin  <damon@karuna.freeserve.co.uk>

	* gtk-doc.dsl.in: Renamed %shade-verbatim-attr-2% to
	$shade-verbatim-attr$ and removed our redefinition of
	$verbatim-display$ since the stylesheets version now calls
	$shade-verbatim-attr$ as a function which is just what we wanted.

	* README: Updated info on stylesheet versions supported - 1.40 is
	known to be OK (with this version of gtk-doc), 1.19+ may work.
