@@ -1070,7 +1070,6 @@ sub ReadObjectHierarchy {
 	    my $level = (length($`)) / 2 + 1;
 #            print ("Level: $level  Object: $object\n");
 
-	    my $xref = &MakeXRef ($object);
 	    push (@Objects, $object);
 	    push (@ObjectLevels, $level);
         }
@@ -1225,7 +1224,8 @@ sub ParseStructDeclaration {
 	    (const\s+)?                         # mod2
 	    (\**)?\s*                           # ptr2
 	    (\w+(?:\s*,\s*\w+)*)\s*             # name
-	    ((?:\[\d*\]\s*)+)?\s*               # array
+	    (?:((?:\[[^\]]*\]\s*)+) |           # array
+	       (:\s*\d+))?\s*                   # bits
 	               $/x) {
 	    my $mod1 = defined($1) ? $1 : "";
 	    if (defined($2)) { $mod1 .= $2; }
@@ -1236,6 +1236,7 @@ sub ParseStructDeclaration {
 	    my $name = $7;
 	    $ptr1 = " " . $ptr1;
 	    my $array = defined($8) ? $8 : "";
+	    my $bits =  defined($9) ? " $9" : "";
 	    my $ptype = defined $typefunc ? $typefunc->($type) : $type;
 	    
 	    # FIXME:
@@ -1252,7 +1253,7 @@ sub ParseStructDeclaration {
 		    $n = $namefunc->($n);
 		}
 		push @result, $n;
-		push @result, "$mod1$ptype$ptr1$mod2$ptr2$n$array";
+		push @result, "$mod1$ptype$ptr1$mod2$ptr2$n$array$bits";
 	    }
 	    
         # Try to match structure members which are functions
